<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="O"> </string>
    <string name="app_name">"Aabercrombie &amp; Fitch "</string>
    <string name="act_promos_promos">Current Promotions</string>
    <string name="act_promos_act_title">PromosAct</string>
    <string name="act_promos_welcome">Welcome </string>
    <string name="act_splash_btn_continue">Continue</string>
    <string name="act_splash_hnt_name">Name or Nickname</string>
    <string name="act_splash_lbl_message">The app is loading </string>
    <string name="act_splash_lbl_name">Please insert your name below</string>
    <string name="act_splash_lbl_welcome">Welcome to the Abercrombie &amp; Fitch app </string>
    <!--string name="pop_no_connection">No internet connection found</string-->
    <string name="pop_no_connection">Check your internet connection and try again ...</string>
    <string name="pop_try_again">Try to connect</string>
    <string name="action_settings">Settings</string>
    <string name="act_promo_detail_title">PromoDetailAct</string>

</resources>
