<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.anf.SplashAct" >

    <ImageView
        android:id="@+id/logoIV"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        android:contentDescription="@string/O" />

    <TextView
        android:id="@+id/userVl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoIV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:text="@string/O" />

    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userVl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/act_splash_lbl_welcome" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/insertNameLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeTV"
        android:layout_alignLeft="@+id/logoIV"
        android:layout_marginTop="4dp"
        android:text="@string/act_splash_lbl_name" />

    <EditText
        android:id="@+id/userNameVl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insertNameLbl"
        android:layout_alignLeft="@+id/logoIV"
        android:hint="@string/act_splash_hnt_name"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameVl"
        android:layout_alignRight="@+id/logoIV"
        android:text="@string/act_splash_btn_continue"
        android:onClick="continueBtnOnClick" />

</RelativeLayout>